duicontrolpanel (0.12.0~unreleased) unstable; urgency=low

  [ Sandor Pinter ]
  * Using default loadHints for loading a plugin

  [ Robert Manner ]
  * Fixes: category for "Security" and "Tactile feedback"
  * Fixes: NB#230474 - Order of Settings categories in Settings main
    view needs to be updated
  * Fixes: NB#230505 - 2nd row labels should be removed from Settings
    main view

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 24 Feb 2011 17:21:53 +0100

duicontrolpanel (0.11.8) unstable; urgency=low

  * Fixes: NB#227727 - Applications list in Settings is not sorted
    alphabetic (now it is sorted by translated title and not engineering
    translation)
  * Fixes: NB#228764 - Settings categories implementation not according
    to new requirements
  * New: applet auto starting if a category contains one applet only can
    be customized via AutoStartApplet key
  * Changes: category names have changed for non-meego targets, applets
    have to recheck their categories

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 21 Feb 2011 14:33:37 +0100

duicontrolpanel (0.11.7.1) unstable; urgency=low

  * Fixes that the outprocess was disabled by mistake

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 17 Feb 2011 11:02:53 +0100

duicontrolpanel (0.11.7) unstable; urgency=low

  [ Robert Manner ]
  * Changes: new briefview type - Slider
  * Changes: Support for briefviews with horizontal layouted value line

  [ Sandor Pinter ]
  * Fixes: NB#227727 - Applications list in Settings is not sorted
    alphabetic

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 15 Feb 2011 16:57:31 +0100

duicontrolpanel (0.11.6.3) unstable; urgency=low

  * disables ft_dcpappletobject temporarily

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Feb 2011 12:19:21 +0100

duicontrolpanel (0.11.6.2) unstable; urgency=low

  * Fixes the flashing before the appletpage openings
  * Changes: Fixed portrait orientation
