@@ -9,8 +9,10 @@ duicontrolpanel (0.12.0~unreleased) unstable; urgency=low
     view needs to be updated
   * Fixes: NB#230505 - 2nd row labels should be removed from Settings
     main view
+  * Fixes: NB#230541 - on staging images from week 8 onward, using D-Bus
+    call to go directly to applets makes it behave erratically
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 24 Feb 2011 17:21:53 +0100
+ -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 25 Feb 2011 11:09:16 +0100
 
 duicontrolpanel (0.11.8) unstable; urgency=low
 
